<resources>
    <string name="app_name">The Forty Rules Of Love</string>
    <string name="app_name_Fa">ملت عشق</string>
    <string name="contentDescription">Content Description</string>
    <string name="laws">قانون‌ها</string>
    <string name="clicked">Clicked</string>
    <string name="aboutUsSoonFa">صفحه درباره ما به زودی تکمیل خواهد شد.</string>
    <string name="settingsSoonFa">صفحه تنظیمات به زودی تکمیل خواهد شد.</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="more">More</string>
    <string name="settingsFa">تنظیمات</string>
    <string name="aboutFa">درباره ما</string>
    <string name="searchFa">جست‌وجو</string>
    <string name="exitFa">خروج</string>
    <string name="moreFa">منو</string>
    <string name="introduction">مقدمه</string>
    <string name="law01">قانون اول</string>
    <string name="law02"> قانون دوم</string>
    <string name="law03">قانون سوم</string>
    <string name="law04">قانون چهارم</string>
    <string name="law05">قانون پنجم</string>
    <string name="law06">قانون ششم</string>
    <string name="law07">قانون هفتم</string>
    <string name="law08">قانون هشتم</string>
    <string name="law09">قانون نهم</string>
    <string name="law10">قانون دهم</string>
    <string name="law11">قانون یازدهم</string>
    <string name="law12">قانون دوازدهم</string>
    <string name="law13">قانون سیزدهم</string>
    <string name="law14">قانون چهاردهم</string>
    <string name="law15">قانون پانزدهم</string>
    <string name="law16">قانون شانزدهم</string>
    <string name="law17">قانون هفدهم</string>
    <string name="law18">قانون هجدهم</string>
    <string name="law19">قانون نوزدهم</string>
    <string name="law20">قانون بیستم</string>
    <string name="law21">قانون بیست و یکم</string>
    <string name="law22">قانون بیست و دوم</string>
    <string name="law23">قانون بیست و سوم</string>
    <string name="law24">قانون بیست و چهارم</string>
    <string name="law25">قانون بیست و پنجم</string>
    <string name="law26">قانون بیست و ششم</string>
    <string name="law27">قانون بیست و هفتم</string>
    <string name="law28">قانون بیست و هشتم</string>
    <string name="law29">قانون بیست و نهم</string>
    <string name="law30">قانون سی‌ام</string>
    <string name="law31">قانون سی و یکم</string>
    <string name="law32">قانون سی و دوم</string>
    <string name="law33">قانون سی و سوم</string>
    <string name="law34">قانون سی و چهارم</string>
    <string name="law35">قانون سی و پنجم</string>
    <string name="law36">قانون سی و ششم</string>
    <string name="law37">قانون سی و هفتم</string>
    <string name="law38">قانون سی و هشتم</string>
    <string name="law39">قانون سی و نهم</string>
    <string name="law40">قانون چهلم</string>
    <string name="introductionDescription">
        چهل قانون عشق که به نام ملت عشق نیز شناخته می‌شود، توسط نویسنده فرانسوی متولد ترکیه «الیف شافاک» نوشته شده است. این رمان که پرفروش‌ترین کتاب تاریخ ترکیه به حساب می‌آید، اثری برگرفته از ارتباط عرفانی بین شمس تبریزی و مولانا است که به صورت دو داستان موازی و در هم تنیده روایت می‌شود. بطن اصلی کتاب حول موضوع عشق و نقش آن در دنیای مدرن امروز نسبت به گذشته می‌نگرد و چنان آن را از غرب به شرق گسترش می‌دهد که به زندگی رنگ و بویی عرفانی و زاییده شده از عشق می‌دهد. اینکه چگونه قطعه سنگی کوچک، برکه‌ای راکد و خاموش را به تلاطم و جنبش وا می‌دارد.
    </string>
    <string name="law01Text">
        کلماتی که برای توصیف پروردگار به کار می‌بریم، همچون آینه‌ای است که خود را در آن می‌بینیم. هنگامی که نام خدا را می‌شنوی ابتدا اگر موجودی ترسناک و شرم‌آور به ذهنت بیاید، به این معناست که تو نیز بیشتر مواقع در ترس و شرم به سر می‌بری. اگر هنگامی که نام خدا را می‌شنوی ابتدا عشق و لطف و مهربانی به یادت بیاید، به این معناست که این صفات در وجود تو نیز فراوان است.
    </string>
    <string name="law02Text">
        پیمودن راه حق کار دل است، نه کار عقل. راهنمایت همیشه دلت باشد، نه سری که بالای شانه‌هایت است. از کسانی باش که به نفس خود آگاهند، نه از کسانی که نفس خود را نادیده می‌گیرند.
    </string>
    <string name="law03Text">
        قرآن را می‌توان در چهار سطح خواند. سطح اول معنای ظاهری است. بعدی معنای باطنی است. سومی بطنِ بطن است. سطح چهارم چنان عمیق است که در وصف نمی‌گنجد.
    </string>
    <string name="law04Text">
        صفات خدا را می‌توانی در هر ذره کائنات بیابی. چون او نه در مسجد و کلیسا و دیر و صومعه، بلکه هر آن همه جا هست. همان طور که کسی نیست که او را دیده و زنده مانده باشد، کسی هم نیست که او را دیده و مرده باشد. هر که او را بیابد تا ابد نزدش می‌ماند.
    </string>
    <string name="law05Text">
        کیمیای عقل با کیمیای عشق فرق دارد. عقل محتاط است. ترسان و لرزان گام بر می‌دارد. با خودش می‌گوید: «مراقب باش آسیبی نبینی». اما مگر عشق این طور است؟ تنها چیزی که عشق می‌گوید این است: «خودت را رها کن. بگذار برود»! عقل به آسانی خراب نمی‌شود. عشق اما خودش را ویران می‌کند. گنج‌ها و خزانه‌ها هم در دل ویرانه‌ها یافت می‌شود، پس هر چه هست در دل خراب است.
    </string>
    <string name="law06Text">
        اکثر درگیری‌ها، پیش‌داوری‌ها و دشمنی‌های این دنیا از زبان منشأ می‌گیرد. تو خودت باش و به کلمه‌ها زیاد بها نده. در دیار عشق زبان حکم نمی‌راند. عاشق بی‌زبان است.
    </string>
    <string name="law07Text">
        در این زندگانی اگر تک و تنها در گوشه‌ی انزوا بمانی و فقط پژواک صدای خود را بشنوی، نمی‌توانی حقیقت را کشف کنی، فقط در آینه‌ی انسانی دیگر است که می‌توانی خودت را کامل ببینی.
    </string>
    <string name="law08Text">
        هیچ‌گاه نومید مشو. اگر همه درها هم به رویت بسته شوند، سرانجام او کوره راهی مخفی را که از چشم همه پنهان مانده، به رویت باز می‌کند. حتی اگر هم ‌اکنون قادر به دیدنش نباشی، بدان که در پس گذرگاه‌های دشوار باغ‌های بهشتی قرار دارد. شکر کن! پس از رسیدن به خواسته‌ات شکر کردن آسان است. صوفی آن است که حتی وقتی خواسته‌اش محقق نشده، شکر گوید.
    </string>
    <string name="law09Text">
        صبر کردن به معنای ماندن و انتظار کشیدن نیست. به معنای آینده‌نگر بودن است. صبر چیست؟ به تیغ نگریستن و گل را پیش چشم مجسم کردن است، به شب نگریستن و روز را در خیال دیدن است. عاشقانِ خدا صبر را هم چون شهد شیرین به کام می‌کشند و هضم می‌کنند. می‌دانند زمان لازم است تا هلال ماه به بدر کامل بدل شود.
    </string>
    <string name="law10Text">
        به هر سو که می‌خواهی –شرق، غرب، شمال یا جنوب– برو، اما هر سفری که آغاز می‌کنی سیاحتی به درون خود بدان! آن که به درون خود سفر می‌کند، سرانجام ارض را طی می‌کند.
    </string>
    <string name="law11Text">
        قابله می‌داند که زایمان بی‌درد نمی‌شود. برای آن که «تویی» نو و تازه از تو ظهور کند باید برای تحمل سختی‌ها و دردها آماده باشی.
    </string>
    <string name="law12Text">
        عشق سفر است. مسافر این سفر چه بخواهد چه نخواهد، از سر تا پا عوض می‌شود. کسی نیست که رهرو این راه شود و تغییر نکند.
    </string>
    <string name="law13Text">
        در این دنیا بیش از ستاره‌های آسمان، مرشدنما و شیخ‌نما هست. مرشد حقیقی آن است که تو را به دیدن درون خودت و کشف کردن زیبایی‌های باطنت رهنمون می‌شود. نه آن که به مریدپروری مشغول شود.
    </string>
    <string name="law14Text">
        به جای مقاومت در برابر تغییراتی که خدا برایت رقم زده است، تسلیم شو. بگذار زندگی با تو جریان یابد، نه بی تو. نگران این نباش که زندگی‌ات زیر و رو شود. از کجا معلوم زیر زندگی‌ات بهتر از رویش نباشد.
    </string>
    <string name="law15Text">
        خدا هر لحظه در حال کامل کردنِ ماست، چه از درون و چه از بیرون. هر کدام ما اثر هنریِ ناتمامی است. هر حادثه‌ای که تجربه می‌کنیم، هر مخاطره‌ای که پشت سر می‌گذاریم، برای رفع نواقصمان طرح‌ریزی شده است. پروردگار به کمبودهایمان جداگانه می‌پردازد، زیرا اثری که انسان نام دارد در پی کمال است.
    </string>
    <string name="law16Text">
        خدا بی‌نقص و کامل است، او را دوست داشتن آسان است. دشوار آن است که انسان فانی را با خطا و صوابش دوست داشته باشی. فراموش نکن که انسان هر چیزی را فقط تا آن حد که دوستش دارد، می‌تواند بشناسد. پس تا دیگری را حقیقتا در آغوش نکشی، تا آفریده را به خاطر آفریدگار دوست نداشته باشی، نه به قدر کافی ممکن است بدانی، نه به قدر کافی ممکن است دوست داشته باشی.
    </string>
    <string name="law17Text">
        آلودگی اصلی نه در بیرون و در ظاهر، بلکه در درون و دل است. لکه ظاهری هر قدر هم بد به نظر بیاید، با شستن پاک می‌شود، با آب تمیز می‌شود. تنها کثافتی که با شستن پاک نمی‌شود حسد و خباثت باطنی است که قلب را مثل پیه در میان می‌گیرد.
    </string>
    <string name="law18Text">
        تمام کائنات با همه لایه‌ها و با همه بغرنجی‌اش در درون انسان پنهان است. شیطان مخلوقی ترسناک نیست که بیرون از ما در پی فریب دادنمان باشد، بلکه صدایی است در درونِ خودمان. در خودت به دنبال شیطان بگرد، نه در بیرون و در دیگران. و فراموش نکن هر که نفسش را بشناسد، پروردگارش را شناخته است. انسانی که نه به دیگران، بلکه به خود بپردازد، سرانجام پاداشش شناخت آفریدگار است.
    </string>
    <string name="law19Text">
        اگر چشم انتظار احترام و توجه و محبت دیگرانی، ابتدا این‌ها را به خودت بدهکاری. کسی که خودش را دوست نداشته باشد ممکن نیست دیگران دوستش داشته باشند. خودت را که دوست داشته باشی، اگر دنیا پر از خار هم بشود، نومید نشو، چون به زودی خارها گل می‌شود.
    </string>
    <string name="law20Text">
        اندیشیدن به پایانِ راه، کاری بیهوده است. وظیفه تو فقط اندیشیدن به نخستین گامی است که برمی‌داری. ادامه‌اش خود به‌ خود می‌آید.
    </string>
    <string name="law21Text">
        به هر کدام ما صفاتی جداگانه عطا شده است. اگر خدا می‌خواست همه عیناً مثل هم باشند، بدون شک همه را مثل هم می‌آفرید. محترم نشمردن اختلاف‌ها و تحمیل عقاید صحیح خود به دیگران بی‌احترامی است نسبت به نظام مقدس خدا.
    </string>
    <string name="law22Text">
        عاشق حقیقی خدا وارد میخانه که بشود، آن جا برایش نمازخانه می‌شود. اما آدم دائم الخمر وارد نمازخانه هم که بشود، آن جا برایش میخانه می‌شود. در این دنیا هر کاری که بکنیم، مهم نیتمان است، نه صورتمان.
    </string>
    <string name="law23Text">
        زندگی اسباب‌بازی پر زرق و برقی است که به امانت به ما سپرده‌اند. بعضی‌ها اسباب‌بازی را آن قدر جدی می‌گیرند که به خاطرش می‌گریند و پریشان می‌شوند. بعضی‌ها هم همین که اسباب‌بازی را به دست می‌گیرند کمی با آن بازی می‌کنند و بعد می‌شکنندش و می‌اندازندش دور. یا زیاده بهایش می‌دهیم یا بهایش را نمی‌دانیم. از زیاده‌روی بپرهیز. صوفی نه افراط می‌کند و نه تفریط. صوفی همیشه میانه را بر می‌گزیند.
    </string>
    <string name="law24Text">
        حال که انسان اشرف مخلوقات است، باید در هر گام به خاطر داشته باشد که خلیفه‌ی خدا بر زمین است و طوری رفتار کند که شایسته‌ی این مقام باشد. انسان اگر فقیر شود، به زندان افتد، آماج افترا شود، حتی به اسارت رود، باز هم باید مانند خلیفه‌ای سرافراز، چشم و دل سیر و با قلبی مطمئن رفتار کند.
    </string>
    <string name="law25Text">
        فقط در آینده دنبال بهشت و جهنم نگرد. هرگاه بتوانیم یکی را بدون چشم‌داشت و حساب و کتاب و معامله، دوست داشته باشیم؛ در اصل در بهشتیم. هرگاه با یکی منازعه کنیم و به نفرت و حسد و کین، آلوده شویم؛ با سر به جهنم افتاده‌ایم.
    </string>
    <string name="law26Text">
        کائنات، وجودی واحد است. همه‌ چیز و همه‌ کس با نخی نامرئی به هم بسته‌اند. مبادا آه کسی را برآوری؛ مبادا دیگری را، به خصوص اگر از تو ضعیف‌تر باشد، بیازاری. فراموش نکن اندوه آدمی تنها در آن سوی دنیا ممکن است همه انسان‌ها را اندوهگین کند. و شادمانی یک نفر ممکن است همه را شادمان کند.
    </string>
    <string name="law27Text">
        این دنیا به کوه می‌ماند، هر فریادی که بزنی، پژواک همان را می‌شنوی. اگر سخنی خیر از دهانت برآید، سخنی خیر پژواک می‌یابد. اگر سخنی شر بر زبان برانی، همان شر به سراغت می‌آید. پس هر که درباره‌ات سخنی زشت بر زبان راند، تو چهل شبانه روز درباره آن انسان سخن نیکو بگو. در پایان چهلمین روز می‌بینی همه چیز عوض شده. اگر دلت دگرگون شود، دنیا دگرگون می‌شود.
    </string>
    <string name="law28Text">
        گذشته مه‌ای است که روی ذهنمان را پوشانده. آینده نیز پس پرده خیال است. نه آینده‌مان مشخص است، نه گذشته‌مان را می‌توانیم عوض کنیم. صوفی همیشه حقیقت زمان حال را در می‌یابد.
    </string>
    <string name="law29Text">
        تقدیر به آن معنا نیست که مسیر زندگیمان از پیش تعیین شده. به همین سبب این که انسان گردن خم کند و بگوید: «چه کنم، تقدیرم این بوده»، نشانه‌ی جهالت است. تقدیر همه‌ی راه نیست، فقط تا سر دو راهی‌هاست. گذرگاه مشخص است، اما انتخاب گردش‌ها و راه‌های فرعی در دست مسافر است. پس نه بر زندگی‌ات حاکمی و نه محکوم آن.
    </string>
</resources>